# SkyrimAlchemy

./: CMakeLists.txt  README  README.md  SkyrimAlchemy.kdev4
.github/workflows/: c-cpp.yml
resources/: alchemy_effect_price  alchemy_material  alchemy_material_en  alchemy_material_tr  resources.qrc
src/: alchemy_effect.cpp  alchemy_effect.h  alchemy_effect_model.cpp  alchemy_effect_model.h  alchemy_material.cpp  alchemy_material.h  alchemy_material_model.cpp  alchemy_material_model.h  alchemy_recipe.cpp  alchemy_recipe.h  alchemy_recipe_model.cpp  alchemy_recipe_model.h  main.cpp  material_manager.cpp  material_manager.h  skyrimalchemy.cpp  skyrimalchemy.h  skyrimalchemy.ui
